syntax = "proto3";
package guigui17f.protobuf_manager;
option csharp_namespace = "GUIGUI17F.ProtobufManager";
option optimize_for = LITE_RUNTIME;

message FieldDefinition {
  bool is_repeated = 1;
  string field_type = 2;
  string field_name = 3;
  int32 field_number = 4;
}